correção da header Sobressaindo

--- a/novo-/categoria.html
+++ b/novo-/categoria.html
@@ -1,33 +1,11 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>categoria</title>
-  <link rel="stylesheet" href="../devcenterparts.vteximg.com.br/arquivos/inovaki-feature-banners.css%3Fv=638491340009770000">
-
-</head>
-<body>
-  
-</body>
-</html>
-
-<ul itemscope="itemscope" class="testess2">
+<ul itemscope="itemscope">
   <li>
-    <a href="/busca/?fq=C:/101" itemprop="url" title="Acabamentos"
-    >Acabamentos</a
+    <a href="/busca/?fq=C:101" itemprop="url" title="Acabamentos"
+      >Acabamentos</a
     >
-    <ul class="orgFlex">
+    <ul>
       <li>
-        <p
-          class="qd_am_code qd-am-noTitle"
-          data-qdam-key="noTitle"
-          data-qdam-value=""
-        >
-          &nbsp;
-        </p>
-
-        <ul>
+        <ul style="display: flex">
           <li>
             <a
               class="qd-am-level-3"
@@ -483,8 +461,8 @@
     </ul>
   </li>
   <li>
-    <a href="/busca/?fq=C:/102" itemprop="url" title="Acessórios">Acessórios</a>
-    <ul class="orgFlex">
+    <a href="/busca/?fq=C:102" itemprop="url" title="Acessórios">Acessórios</a>
+    <ul>
       <li>
         <p
           class="qd_am_code qd-am-noTitle"
@@ -494,7 +472,7 @@
           &nbsp;
         </p>
 
-        <ul>
+        <ul style="display: flex; gap: 3px">
           <li>
             <p
               class="qd_am_code qd-am-noTitle"
@@ -507,7 +485,7 @@
           <li>
             <a
               class="qd-am-secondLevelItem"
-              href="/busca/?fq=C:/102/204"
+              href="/busca/?fq=C:102/204"
               itemprop="url"
               title="Alarmes e Sonorização"
               ><strong>Alarmes e Sonorização</strong></a
@@ -1003,8 +981,8 @@
               href="/busca/?fq=C:102/211"
               itemprop="url"
               title="Volantes"
-              >Volantes<strong></strong
-            ></a>
+              ><strong>Volantes</strong></a
+            >
             <ul>
               <li>
                 <a
@@ -1062,8 +1040,8 @@
     </ul>
   </li>
   <li>
-    <a href="/busca/?fq=C:/103" itemprop="url" title="Colisão">Colisão</a>
-    <ul class="orgFlex">
+    <a href="/busca/?fq=C:103" itemprop="url" title="Colisão">Colisão</a>
+    <ul>
       <li>
         <p
           class="qd_am_code qd-am-noTitle"
@@ -1073,7 +1051,7 @@
           &nbsp;
         </p>
 
-        <ul>
+        <ul style="display: flex; gap: 3px">
           <li>
             <p
               class="qd_am_code qd-am-noTitle"
@@ -1494,7 +1472,7 @@
 
   <li>
     <a href="/busca/?fq=C:104" itemprop="url" title="Elétrica">Elétrica</a>
-    <ul class="orgFlex">
+    <ul>
       <li>
         <p
           class="qd_am_code qd-am-noTitle"
@@ -1504,7 +1482,7 @@
           &nbsp;
         </p>
 
-        <ul>
+        <ul style="display: flex; gap: 3px">
           <li>
             <a
               class="qd-am-secondLevelItem"
@@ -2383,141 +2361,140 @@
             </ul>
           </li>
 
-            <ul>
-              <li>
-                <a
-                  class="qd-am-secondLevelItem"
-                  href="/busca/?fq=C:104/222"
-                  itemprop="url"
-                  title="Fusiveis"
-                  ><strong>Fusiveis</strong></a
-                >
-                <ul>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/222/34033"
-                      itemprop="url"
-                      title="Caixa Fusível"
-                      >Caixa Fusível</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/222/34061"
-                      itemprop="url"
-                      title="Cx Fusível"
-                      >Cx Fusível</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/222/34081"
-                      itemprop="url"
-                      title="Fusíveis"
-                      >Fusíveis</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/222/34134"
-                      itemprop="url"
-                      title="Porta Fusível"
-                      >Porta Fusível</a
-                    >
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a
-                  class="qd-am-secondLevelItem"
-                  href="/busca/?fq=C:104/223"
-                  itemprop="url"
-                  title="Iluminação"
-                  ><strong>Iluminação</strong></a
-                >
-                <ul>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/233/34110"
-                      itemprop="url"
-                      title="Lâmpadas"
-                      >Lâmpadas</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/233/32143"
-                      itemprop="url"
-                      title="Lâmpadas LED"
-                      >Lâmpadas LED</a
-                    >
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a
-                  class="qd-am-secondLevelItem"
-                  href="/busca/?fq=C:104/224"
-                  itemprop="url"
-                  title="Interruptores"
-                  ><strong>Interruptores</strong></a
-                >
-                <ul>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/224/34104"
-                      itemprop="url"
-                      title="Interruptores"
-                      >Interruptores</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/224/34103"
-                      itemprop="url"
-                      title="Interruptores de Vidro"
-                      >Interruptores de Vidro</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/224/34186"
-                      itemprop="url"
-                      title="Interruptores Diversos"
-                      >Interruptores Diversos</a
-                    >
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a
-                  class="qd-am-secondLevelItem"
-                  href="/busca/?fq=C:104/224"
-                  itemprop="url"
-                  title="Outros"
-                  ><strong>Outros</strong></a
-                >
-                <ul>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/225/34123"
-                      itemprop="url"
-                      title="Chaves de Acionamento de Limpadores de Para-brisas"
-                      >Chaves de Acionamento de Limpadores de Para-brisas</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="/busca/?fq=C:104/225/34183"
-                      itemprop="url"
-                      title="Fita Isolante"
-                      >Fita Isolante</a
-                    >
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+          <ul>
+            <li>
+              <a
+                class="qd-am-secondLevelItem"
+                href="/busca/?fq=C:104/222"
+                itemprop="url"
+                title="Fusiveis"
+                ><strong>Fusiveis</strong></a
+              >
+              <ul>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/222/34033"
+                    itemprop="url"
+                    title="Caixa Fusível"
+                    >Caixa Fusível</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/222/34061"
+                    itemprop="url"
+                    title="Cx Fusível"
+                    >Cx Fusível</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/222/34081"
+                    itemprop="url"
+                    title="Fusíveis"
+                    >Fusíveis</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/222/34134"
+                    itemprop="url"
+                    title="Porta Fusível"
+                    >Porta Fusível</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a
+                class="qd-am-secondLevelItem"
+                href="/busca/?fq=C:104/223"
+                itemprop="url"
+                title="Iluminação"
+                ><strong>Iluminação</strong></a
+              >
+              <ul>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/233/34110"
+                    itemprop="url"
+                    title="Lâmpadas"
+                    >Lâmpadas</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/233/32143"
+                    itemprop="url"
+                    title="Lâmpadas LED"
+                    >Lâmpadas LED</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a
+                class="qd-am-secondLevelItem"
+                href="/busca/?fq=C:104/224"
+                itemprop="url"
+                title="Interruptores"
+                ><strong>Interruptores</strong></a
+              >
+              <ul>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/224/34104"
+                    itemprop="url"
+                    title="Interruptores"
+                    >Interruptores</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/224/34103"
+                    itemprop="url"
+                    title="Interruptores de Vidro"
+                    >Interruptores de Vidro</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/224/34186"
+                    itemprop="url"
+                    title="Interruptores Diversos"
+                    >Interruptores Diversos</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a
+                class="qd-am-secondLevelItem"
+                href="/busca/?fq=C:104/224"
+                itemprop="url"
+                title="Outros"
+                ><strong>Outros</strong></a
+              >
+              <ul>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/225/34123"
+                    itemprop="url"
+                    title="Chaves de Acionamento de Limpadores de Para-brisas"
+                    >Chaves de Acionamento de Limpadores de Para-brisas</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/busca/?fq=C:104/225/34183"
+                    itemprop="url"
+                    title="Fita Isolante"
+                    >Fita Isolante</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
         </ul>
       </li>
     </ul>
@@ -2525,8 +2502,8 @@
 
   <li>
     <a href="/busca/?fq=C:105" itemprop="url" title="Fixação">Fixação</a>
-    <ul class="orgFlex">
-      <li>
+    <ul>
+      <li style="display: flex; gap: 3px">
         <p
           class="qd_am_code qd-am-noTitle"
           data-qdam-key="noTitle"
@@ -2536,7 +2513,7 @@
         </p>
 
         <ul>
-          <li>
+          <li class="flex-categoria-menu">
             <p
               class="qd_am_code qd-am-noTitle"
               data-qdam-key="noTitle"
@@ -2620,6 +2597,7 @@
                       href="/busca/?fq=C:105/227/35009"
                       itemprop="url"
                       title="Batentes de Porta e Porta-Malas"
+                      style=""
                       >Batentes de Porta e Porta-Malas</a
                     >
                   </li>
@@ -2829,7 +2807,7 @@
     <a href="/busca/?fq=C:106" itemprop="url" title="Guarnições de Borracha"
       >Guarnições de Borracha</a
     >
-    <ul class="orgFlex">
+    <ul>
       <li>
         <p
           class="qd_am_code qd-am-noTitle"
@@ -2849,7 +2827,7 @@
               &nbsp;
             </p>
 
-            <ul>
+            <ul style="display: flex; gap: 3px">
               <li>
                 <a
                   class="qd-am-secondLevelItem"
@@ -3007,25 +2985,10 @@
       title="Mecanismos de Abertura e Fechamento"
       >Mecanismos de Abertura e Fechamento</a
     >
-    <ul class="orgFlex">
+    <ul>
       <li>
-        <p
-          class="qd_am_code qd-am-noTitle"
-          data-qdam-key="noTitle"
-          data-qdam-value=""
-        >
-          &nbsp;
-        </p>
         <ul>
-          <li>
-            <p
-              class="qd_am_code qd-am-noTitle"
-              data-qdam-key="noTitle"
-              data-qdam-value=""
-            >
-              &nbsp;
-            </p>
-
+          <li style="display: flex; gap: 3px">
             <ul>
               <li>
                 <a
@@ -3497,8 +3460,8 @@
       title="Motor, Cambio, Alimentação, Freio"
       >Motor, Cambio, Alimentação, Freio</a
     >
-    <ul class="orgFlex">
-      <li>
+    <ul>
+      <li style="display: flex; gap: 3px">
         <p
           class="qd_am_code qd-am-noTitle"
           data-qdam-key="noTitle"
@@ -3707,7 +3670,7 @@
     <a href="/busca/?fq=C:109" itemprop="url" title="Químicos e Ferramentas"
       >Químicos e Ferramentas</a
     >
-    <ul class="orgFlex">
+    <ul>
       <li>
         <p
           class="qd_am_code qd-am-noTitle"
@@ -3727,7 +3690,7 @@
               &nbsp;
             </p>
 
-            <ul>
+            <ul style="display: flex; gap: 3px">
               <li>
                 <a
                   class="qd-am-secondLevelItem"
@@ -3799,8 +3762,8 @@
 
   <li>
     <a href="/busca/?fq=C:110" itemprop="url" title="Segurança">Segurança</a>
-    <ul class="orgFlex">
-      <li>
+    <ul>
+      <li style="display: flex; gap: 3px">
         <p
           class="qd_am_code qd-am-noTitle"
           data-qdam-key="noTitle"
@@ -4090,8 +4053,8 @@
 
   <li>
     <a href="/busca/?fq=C:111" itemprop="url" title="Suspensão">Suspensão</a>
-    <ul class="orgFlex">
-      <li>
+    <ul>
+      <li style="display: flex; gap: 3px">
         <p
           class="qd_am_code qd-am-noTitle"
           data-qdam-key="noTitle"
