adicionando classe header

--- a/production/newClassTel.html
+++ b/production/newClassTel.html
@@ -24,7 +24,7 @@
 <div id="cart">
   <div style="display: none"><vtex.cmc:welcomeMessage /></div>
   <header class="d-none d-xl-block">
-    <div class="mz-header">
+    <div class="mz-header headerUnset">
       <div class="d-none d-md-block h-100 mz-header__top">
         <div class="d-flex justify-content-between">
           <div class="d-flex iconTel">
