--- a/novo-/categoria.html
+++ b/novo-/categoria.html
@@ -84,7 +84,7 @@
           </li>
           <li>
             <a class="qd-am-level-3" href="/busca/?fq=C:101/202" itemprop="url"
-              title="Acabamentos Internos"><strong>Acabamentos Internos</strong></a>
+              title="Acabamentos Internos"><strong>ACABAMENTOS INTERNOS</strong></a>
             <ul>
               <li>
                 <a href="/busca/?fq=C:101/202/32304" itemprop="url" title="Moldura Externa do Retrovisor">Acabamento de
@@ -1173,7 +1173,7 @@
                   </li>
                   <li>
                     <a href="/busca/?fq=C:105/227/35009" itemprop="url" title="Batentes de Porta e Porta-Malas"
-                      style="">Batentes de Porta e Porta-Malas</a>
+                    >Batentes de Porta e Porta-Malas</a>
                   </li>
                 </ul>
               </li>
