correções e espaçamento nas subcategorias

--- a/novo-/categoria.html
+++ b/novo-/categoria.html
@@ -7,9 +7,9 @@
           &nbsp;
         </p>
         <ul style="display: flex; margin-top: 40px;">
-          <li>
-            <a class="qd-am-level-3" href="/busca/?fq=C:101/201" itemprop="url"
-              title="Acabamentos Externos"><strong class="uppercase">ACABAMENTOS EXTERNOS</strong></a>
+          <li class="menu-acabamento">
+            <a class="qd-am-secondLevelItem menu-acabamento-titulo" href="/busca/?fq=C:101/201" itemprop="url"
+              title="Acabamentos Externos"><strong >ACABAMENTOS EXTERNOS</strong></a>
             <ul>
               <li>
                 <a href="/busca/?fq=C:101/201/37002" itemprop="url" title="Aros de Lanterna Traseira">Aros de Lanterna
@@ -53,18 +53,17 @@
                   Parachoques</a>
               </li>
               <li>
-                <a href="/busca/?fq=C:101/201/32121" itemprop="url" title="Frisos Laterais">Frisos Laterais</a>
+                <a href="/busca/?fq=C:101/201/32131" itemprop="url" title="Frisos Laterais">Frisos Laterais</a>
               </li>
               <li>
-                <a href="/busca/?fq=C:101/201/32124" itemprop="url" title="Gancho Caçamba">Gancho Caçamba</a>
+                <a href="/busca/?fq=C:101/201/32134" itemprop="url" title="Gancho Caçamba">Gancho Caçamba</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:101/201/32164" itemprop="url" title="Molduras de Parachoques">Molduras de
                   Parachoques</a>
               </li>
               <li>
-                <a href="/busca/?fq=C:101/201/32006" itemprop="url" title="Molduras de Para Paralamas">Molduras de Para
-                  Paralamas</a>
+                <a href="/busca/?fq=C:101/201/32006" itemprop="url" title="Molduras de Para Paralamas">Molduras de Paralamas</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:101/201/32097" itemprop="url"
@@ -82,9 +81,9 @@
               </li>
             </ul>
           </li>
-          <li>
-            <a class="qd-am-level-3" href="/busca/?fq=C:101/202" itemprop="url"
-              title="Acabamentos Internos"><strong>ACABAMENTOS INTERNOS</strong></a>
+          <li class="menu-acabamento">
+            <a class="qd-am-level-3 menu-acabamento-titulo" href="/busca/?fq=C:101/202" itemprop="url"
+              title="qd-am-secondLevelItem"><strong>ACABAMENTOS INTERNOS</strong></a>
             <ul>
               <li>
                 <a href="/busca/?fq=C:101/202/32304" itemprop="url" title="Moldura Externa do Retrovisor">Acabamento de
@@ -98,7 +97,7 @@
                 <a href="/busca/?fq=C:101/202/32017" itemprop="url" title="Churrasqueiras e Complementos">Alça</a>
               </li>
               <li>
-                <a href="/busca/?fq=C:101/202/32029" itemprop="url" title="Molduras de Placa">Anti-ruido</a>
+                <a href="/busca/?fq=C:101/202/32258" itemprop="url" title="Anti-Ruidos">Anti-Ruidos</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:101/202/32034" itemprop="url" title="Apoio de Cabeça">Apoio Cabeça</a>
@@ -123,7 +122,7 @@
                 <a href="/busca/?fq=C:101/202/32059" itemprop="url" title="Botão Painel">Botão Painel</a>
               </li>
               <li>
-                <a href="/busca/?fq=C:101/202/32060" itemprop="url" title="botão Porta">botão Porta</a>
+                <a href="/busca/?fq=C:101/202/32060" itemprop="url" title="Botão Porta">Botão Porta</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:101/202/32066" itemprop="url" title="Caixa Ventilação">Caixa Ventilação</a>
@@ -164,7 +163,7 @@
               </li>
               <li>
                 <a href="/busca/?fq=C:101/202/32307" itemprop="url"
-                  title="Porta-luvas (Caixas, Tampas, Fechos, Maçanetas)">Porta-luvas (Caixas, Tampas, Fechos,
+                  title="Porta-Luvas (Caixas, Tampas, Fechos, Maçanetas)">Porta-Luvas (Caixas, Tampas, Fechos,
                   Maçanetas)</a>
               </li>
               <li>
@@ -175,11 +174,11 @@
                   Descansa Braço</a>
               </li>
               <li>
-                <a href="/busca/?fq=C:101/202/32187" itemprop="url" title="Quebra-sois">Quebra-sois</a>
+                <a href="/busca/?fq=C:101/202/32187" itemprop="url" title="Quebra-Sois">Quebra-Sois</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:101/202/32056" itemprop="url"
-                  title="Revestimentos de Porta e Porta-malas">Revestimentos de Porta e Porta-malas</a>
+                  title="Revestimentos de Porta e Porta-Malas">Revestimentos de Porta e Porta-Malas</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:101/202/32223" itemprop="url" title="Tampa Assoalho">Tampa Assoalho</a>
@@ -219,7 +218,7 @@
               title="Alarmes e Sonorização"><strong>ALARMES E SONORIZAÇÃO</strong></a>
             <ul>
               <li>
-                <a href="/busca/?fq=C:102/204/32010" itemprop="url" title="acessórios - Som">acessórios - Som</a>
+                <a href="/busca/?fq=C:102/204/32010" itemprop="url" title="acessórios - Som">Acessórios - Som</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:102/204/32016" itemprop="url" title="Alarme">Alarme</a>
@@ -232,14 +231,14 @@
                   Específicas</a>
               </li>
               <li>
-                <a href="/busca/?fq=C:102/204/32045" itemprop="url" title="Auto-falante">Auto-falante</a>
+                <a href="/busca/?fq=C:102/204/32045" itemprop="url" title="Auto-Falante">Auto-Falante</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:102/204/32154" itemprop="url" title="Módulo de Potência">Módulo de Potência</a>
               </li>
               <li>
-                <a href="/busca/?fq=C:102/204/32245" itemprop="url" title="Telas de Auto-falantes">Telas de
-                  Auto-falantes</a>
+                <a href="/busca/?fq=C:102/204/32245" itemprop="url" title="Telas de Auto-Falantes">Telas de
+                  Auto-Falantes</a>
               </li>
             </ul>
           </li>
@@ -260,7 +259,7 @@
               title="Conforto"><strong>CONFORTO</strong></a>
             <ul>
               <li>
-                <a href="/busca/?fq=C:102/206/32043" itemprop="url" title="Carregadores">Assento Bolinha</a>
+                <a href="/busca/?fq=C:102/206/32043" itemprop="url" title="Assento Bolinha">Assento Bolinha</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:102/206/32190" itemprop="url" title="Bagageiros e Racks">Bagageiros e Racks</a>
@@ -381,7 +380,7 @@
                 <a href="/busca/?fq=C:102/210/32014" itemprop="url" title="Aerofolios">Aerofolios</a>
               </li>
               <li>
-                <a href="/busca/?fq=C:102/210/32215" itemprop="url" title="Alargador Paralama">Alargador Paralama</a>
+                <a href="/busca/?fq=C:102/210/32015" itemprop="url" title="Alargador Paralama">Alargador Paralama</a>
               </li>
               <li>
                 <a href="/busca/?fq=C:102/210/32300" itemprop="url" title="Antenas - Decorativas">Antenas -
@@ -574,26 +573,26 @@
                   title="Para-Choques"><strong>PARA-CHOQUES</strong></a>
                 <ul class="padding-sub">
                   <li>
-                    <a href="/busca/?fq=C:103/215/32021" itemprop="url" title="Para-choque - Almas de Aco">Para-choque -
+                    <a href="/busca/?fq=C:103/215/32021" itemprop="url" title="Para-Choque - Almas de Aco">Para-Choque -
                       Almas de Aco</a>
                   </li>
                   <li>
-                    <a href="/busca/?fq=C:103/215/32167" itemprop="url" title="Para-choques">Para-choques</a>
+                    <a href="/busca/?fq=C:103/215/32167" itemprop="url" title="Para-Choques">Para-Choques</a>
                   </li>
                   <li>
-                    <a href="/busca/?fq=C:103/215/32220" itemprop="url" title="Para-choques - Guias">Para-choques -
+                    <a href="/busca/?fq=C:103/215/32220" itemprop="url" title="Para-Choques - Guias">Para-Choques -
                       Guias</a>
                   </li>
                   <li>
-                    <a href="/busca/?fq=C:103/215/32173" itemprop="url" title="Para-choques - Ponteiras">Para-choques -
+                    <a href="/busca/?fq=C:103/215/32173" itemprop="url" title="Para-Choques - Ponteiras">Para-Choques -
                       Ponteiras</a>
                   </li>
                   <li>
-                    <a href="/busca/?fq=C:103/215/32219" itemprop="url" title="Para-choques - Suportes">Para-choques -
+                    <a href="/busca/?fq=C:103/215/32219" itemprop="url" title="Para-Choques - Suportes">Para-Choques -
                       Suportes</a>
                   </li>
                   <li>
-                    <a href="/busca/?fq=C:103/215/32232" itemprop="url" title="Para-choques - Tampas">Para-choques -
+                    <a href="/busca/?fq=C:103/215/32232" itemprop="url" title="Para-Choques - Tampas">Para-Choques -
                       Tampas</a>
                   </li>
                 </ul>
@@ -1111,12 +1110,12 @@
               </ul>
             </li>
             <li>
-              <a class="qd-am-secondLevelItem" href="/busca/?fq=C:104/224" itemprop="url"
+              <a class="qd-am-secondLevelItem" href="/busca/?fq=C:104/225" itemprop="url"
                 title="Outros"><strong>OUTROS</strong></a>
               <ul class="padding-sub">
                 <li>
                   <a href="/busca/?fq=C:104/225/34123" itemprop="url"
-                    title="Chaves de Acionamento de Limpadores de Para-brisas">Chaves de Acionamento de Limpadores de
+                    title="Chaves de Acionamento de Limpadores de Parabrisas">Chaves de Acionamento de Limpadores de
                     Parabrisas</a>
                 </li>
                 <li>
@@ -1254,8 +1253,9 @@
                   title="Suportes"><strong>SUPORTES</strong></a>
                 <ul class="padding-sub">
                   <li>
-                    <a href="/busca/?fq=C:105/231/32221" itemprop="url" title="Churrasqueiras">Suportes de
-                      Quebra-sol</a>
+                    <a href="/busca/?fq=C:105/231/32221" itemprop="url" title="Suportes de
+                    Quebra-Sol">Suportes de
+                      Quebra-Sol</a>
                   </li>
                 </ul>
               </li>
@@ -1302,11 +1302,11 @@
             </p>
 
             <ul style="display: flex; gap: 3px; margin-top: 40px;">
-              <li>
+              <li class="padding-subcategoria">
                 <a class="qd-am-secondLevelItem" href="/busca/?fq=C:106/232" itemprop="url"
                   title="Carroceria"><strong>CARROCERIA</strong></a>
 
-                <ul>
+                <ul class="padding-subcategoria-titulo">
                   <li>
                     <a href="/busca/?fq=C:106/232/36006" itemprop="url" title="Borr P.Malas/Capo/Motor/T.Tras">Borr
                       P.Malas/Capo/Motor/T.Tras</a>
@@ -1340,7 +1340,7 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <li class="padding-subcategoria">
                 <a class="qd-am-secondLevelItem" href="/busca/?fq=C:106/233" itemprop="url"
                   title="Vidro"><strong>VIDRO</strong></a>
                 <ul>
@@ -1415,10 +1415,10 @@
                   title="Cilindros"><strong>CILINDROS</strong></a>
                 <ul class="padding-sub">
                   <li>
-                    <a href="/busca/?fq=C:107/237/32281" itemprop="url" title="Cilindro P/ Mala">Cilindro P/ Mala</a>
+                    <a href="/busca/?fq=C:107/237/35018" itemprop="url" title="Cilindro P/ Mala">Cilindro P/ Mala</a>
                   </li>
                   <li>
-                    <a href="/busca/?fq=C:107/237/32311" itemprop="url" title="Cilindro Porta">Cilindro Porta</a>
+                    <a href="/busca/?fq=C:107/237/35019" itemprop="url" title="Cilindro Porta">Cilindro Porta</a>
                   </li>
                 </ul>
               </li>
@@ -1748,8 +1748,8 @@
             </p>
 
             <ul style="display: flex; gap: 3px; margin-top: 40px;">
-              <li>
-                <a class="qd-am-secondLevelItem" href="/busca/?fq=C:109/250" itemprop="url"
+              <li class="padding-subcategoria">
+                <a class="qd-am-secondLevelItem padding-subcategoria-titulo" href="/busca/?fq=C:109/250" itemprop="url"
                   title="Ferramentas"><strong>FERRAMENTAS</strong></a>
                 <ul>
                   <li>
@@ -1760,8 +1760,8 @@
                   </li>
                 </ul>
               </li>
-              <li>
-                <a class="qd-am-secondLevelItem" href="/busca/?fq=C:109/251" itemprop="url"
+              <li class="padding-subcategoria">
+                <a class="qd-am-secondLevelItem padding-subcategoria-titulo" href="/busca/?fq=C:109/251" itemprop="url"
                   title="Higienização"><strong>HIGIENIZAÇÃO</strong></a>
                 <ul>
                   <li>
