espaçamento nas subcategorias

--- a/novo-/categoria.html
+++ b/novo-/categoria.html
@@ -699,10 +699,10 @@
         </p>
 
         <ul style="display: flex; gap: 3px; margin-top: 40px;">
-          <li>
+          <li class="padding-subcategoria">
             <a class="qd-am-secondLevelItem" href="/busca/?fq=C:104/219" itemprop="url"
               title="Chaves"><strong>CHAVES</strong></a>
-            <ul class="padding-sub">
+            <ul class="padding-subcategoria-titulo padding-sub">
               <li>
                 <a href="/busca/?fq=C:104/219/34037" itemprop="url" title="Chave Contato">Chave Contato</a>
               </li>
@@ -723,10 +723,10 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="padding-subcategoria">
             <a class="qd-am-secondLevelItem" href="/busca/?fq=C:104/220" itemprop="url"
               title="Combustivel"><strong>COMBUSTIVEL</strong></a>
-            <ul class="padding-sub">
+            <ul class="padding-subcategoria-titulo">
               <li>
                 <a href="/busca/?fq=C:104/220/34019" itemprop="url" title="Boia de Combustível">Boia de Combustível</a>
               </li>
@@ -744,16 +744,16 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li >
             <p class="qd_am_code qd-am-noTitle" data-qdam-key="noTitle" data-qdam-value="">
               &nbsp;
             </p>
 
             <ul>
-              <li>
+              <li class="padding-subcategoria">
                 <a class="qd-am-secondLevelItem" href="/busca/?fq=C:104/221" itemprop="url"
                   title="Eletrica"><strong>ELÉTRICA</strong></a>
-                <ul class="padding-sub">
+                <ul class="padding-subcategoria-titulo padding-sub"> 
                   <li>
                     <a href="/busca/?fq=C:104/221/34004" itemprop="url" title="Alternador">Alternador</a>
                   </li>
@@ -1631,12 +1631,12 @@
         </p>
 
         <ul>
-          <li>
+          <li class="padding-subcategoria">
             <p class="qd_am_code qd-am-noTitle" data-qdam-key="noTitle" data-qdam-value="">
               &nbsp;
             </p>
 
-            <ul>
+            <ul class="padding-subcategoria-titulo">
               <li>
                 <a class="qd-am-secondLevelItem" href="/busca/?fq=C:108/246" itemprop="url"
                   title="Alimentação"><strong>ALIMENTAÇÃO</strong></a>
@@ -1676,12 +1676,12 @@
           </li>
         </ul>
         <ul>
-          <li>
+          <li class="padding-subcategoria">
             <p class="qd_am_code qd-am-noTitle" data-qdam-key="noTitle" data-qdam-value="">
               &nbsp;
             </p>
 
-            <ul>
+            <ul class="padding-subcategoria-titulo">
               <li>
                 <a class="qd-am-secondLevelItem" href="/busca/?fq=C:108/248" itemprop="url"
                   title="Freio"><strong>FREIO</strong></a>
@@ -1945,12 +1945,12 @@
         </p>
 
         <ul>
-          <li>
+          <li class="padding-subcategoria">
             <p class="qd_am_code qd-am-noTitle" data-qdam-key="noTitle" data-qdam-value="">
               &nbsp;
             </p>
 
-            <ul>
+            <ul class="padding-subcategoria-titulo">
               <li>
                 <a class="qd-am-secondLevelItem" href="/busca/?fq=C:111/255" itemprop="url"
                   title="Batentes"><strong>BATENTES</strong></a>
@@ -1998,11 +1998,11 @@
           </li>
         </ul>
         <ul>
-          <li>
+          <li class="padding-subcategoria">
             <p class="qd_am_code qd-am-noTitle" data-qdam-key="noTitle" data-qdam-value="">
               &nbsp;
             </p>
-            <ul>
+            <ul class="padding-subcategoria-titulo">
               <li>
                 <a class="qd-am-secondLevelItem" href="/busca/?fq=C:111/257" itemprop="url"
                   title="Buchas"><strong>BUCHAS</strong></a>
